--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,12 @@ services:
       dockerfile: maticgasstation.Dockerfile
     expose:
       - '127.0.0.1:7000:7000'
+    healthcheck:
+      test: ["CMD-SHELL", "curl http://localhost:7000/v2"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
 
   gaspriceoracle:
     container_name: gaspriceoracle
@@ -29,5 +35,6 @@ services:
       -  ./docker.env
     build:
       context: .
-    expose:
-      - '127.0.0.1:7000:7000'
+    depends_on:
+      maticgasstation:
+        condition: service_healthy
