--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     build:
       context: .
       dockerfile: maticgasstation.Dockerfile
-    expose:
+    ports:
       - '127.0.0.1:7000:7000'
     healthcheck:
       test: ["CMD-SHELL", "curl http://localhost:7000/v2"]
