--- a/docker.env
+++ b/docker.env
@@ -1,3 +1,3 @@
-GAS_STATION=http://maticgasstation:7000
+GAS_STATION=http://maticgasstation:7000/v2
 RPC_URL=https://polygon-mainnet.chainnodes.org/d692ae63-0a7e-43e0-9da9-fe4f4cc6c607
 MNEMONIC=
