--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "files": [
     "contracts",
     "src",
+    ".dockerignore",
     ".eslintrc.js",
     ".gitignore",
     "docker-compose.yml",
